feat: add text annotation for bar chart

--- a/plot/plot_cache_miss_mt.ipynb
+++ b/plot/plot_cache_miss_mt.ipynb
@@ -259,13 +259,16 @@
     "                hue='cores', palette='pastel', dodge=False, sharex=False)\n",
     "# Loop over the bars\n",
     "#ax.annotate(percentage, (x, y))\n",
-    "for i in range(len(y_a[benchmark])):\n",
-    "    for j,thisbar in enumerate(g.axes[0][i].patches):\n",
+    "for i, ax in enumerate(g.axes.flat):\n",
+    "    for j, thisbar in enumerate(ax.patches):\n",
     "        # Set a different hatch for each bar\n",
-    "        thisbar.set_hatch(hatches[j])\n",
-    "        #thisbar.bar_label(j,)\n",
-    "        \n",
-    "        \n",
+    "        thisbar.set_hatch(hatches[j % len(hatches)])\n",
+    "        # Add text annotation\n",
+    "        ax.text(thisbar.get_x() + thisbar.get_width() / 2, thisbar.get_height(),\n",
+    "            f'{thisbar.get_height():.2f}',  #格式化输出至小数点后两位\n",
+    "            ha='center', va='bottom', fontsize=9)  #水平居中，底部对齐，字体大小9\n",
+    "            \n",
+    "            \n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
